Unify API key creation
